// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> spanshots matche 1`] = `
<div>
  <ul
    class="navbar-items"
    data-testid="navbar"
  >
    <li>
      <a
        class="navbar-item"
        href="/TopNewsPage"
      >
        Top News
      </a>
    </li>
    <li>
      <a
        class="navbar-item"
        href="/CategoriesPage"
      >
        Categories
      </a>
    </li>
    <li>
      <a
        class="navbar-item"
        href="/SearchPage"
      >
        Search
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navbar /> spanshots matche 2`] = `
<div>
  <ul
    class="navbar-items"
    data-testid="navbar"
  >
    <li>
      <a
        aria-current="page"
        class="navbar-item navbar-item--checked"
        href="/TopNewsPage"
      >
        Top News
      </a>
    </li>
    <li>
      <a
        class="navbar-item"
        href="/CategoriesPage"
      >
        Categories
      </a>
    </li>
    <li>
      <a
        class="navbar-item"
        href="/SearchPage"
      >
        Search
      </a>
    </li>
  </ul>
</div>
`;
